[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aizynthfinder"
version = "4.4.1"
description = "Retrosynthetic route finding using neural-network-guided Monte Carlo tree search"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "MIT"
authors = [
  { name = "Molecular AI group", email = "samuel.genheden@astrazeneca.com" },
]
maintainers = [
  { name = "Molecular AI group", email = "samuel.genheden@astrazeneca.com" },
]
keywords = ["chemistry", "retrosynthesis", "rdkit", "route-planning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
  "deprecated>=1.2.10",
  "jinja2>=3.0.0",
  "networkx>=2.4",
  "numpy<2.0.0",
  "onnxruntime>=1.23.0",
  "pandas>=1.0.0,<3.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "paretoset>=1.2.3",
  "pillow>=12.0.0",
  "psutil>=5.9",
  "rdchiral>=1.0.0",
  "rdkit>=2023.9.1",
  "reaction-utils>=1.9.3",
  "requests>=2.23.0",
  "tables>=3.6.1",
  "tqdm>=4.42.1",
  "ipywidgets>=7.5.1; extra == 'notebooks'",
]

[project.urls]
Homepage = "https://github.com/MolecularAI/aizynthfinder/"
Repository = "https://github.com/MolecularAI/aizynthfinder/"
Documentation = "https://molecularai.github.io/aizynthfinder/"

[project.scripts]
aizynthapp = "aizynthfinder.interfaces.aizynthapp:main"
aizynthcli = "aizynthfinder.interfaces.aizynthcli:main"
cat_aizynth_output = "aizynthfinder.tools.cat_output:main"
download_public_data = "aizynthfinder.tools.download_public_data:main"
smiles2stock = "aizynthfinder.tools.make_stock:main"
aizynthplan = "aizynthfinder.tools.run_planning:main"

[project.optional-dependencies]
notebooks = [
  "ipython>=8",
  "ipywidgets>=7.5.1",
  "jupyter>=1.0.0",
  "jupytext>=1.3.3",
  "matplotlib>=3.0.0",
  "notebook>=6.5.3",
  "scipy>=1.0",
  "seaborn>=0.13.2",
]
tf = [
  "grpcio>=1.24.0",
  "tensorflow>=2.20.0",
  "tensorflow-serving-api>=2.1.0",
]
mongo = [
  "pymongo>=3.10.1",
]
bloom = [
  "molbloom>=2.1.0",
]
all = [
  "aizynthfinder[bloom,mongo,notebooks,tf]",
]
test = [
  "pytest>=6.2.2",
  "pytest-black>=0.3.12",
  "pytest-cov>=2.11.0",
  "pytest-datadir>=1.3.1",
  "pytest-mccabe>=2.0.0",
  "pytest-mock>=3.5.0",
]
docs = [
  "sphinx>=7.3.7",
]
dev = [
  "black>=22.0.0",
  "invoke>=2.2.0",
  "mypy>=1.0.0",
  "pylint>=2.16.0",
  "ruff>=0.11.0",
  "aizynthfinder[docs,test]",
]

[dependency-groups]
test = [
  "pytest>=6.2.2",
  "pytest-black>=0.3.12",
  "pytest-cov>=2.11.0",
  "pytest-datadir>=1.3.1",
  "pytest-mccabe>=2.0.0",
  "pytest-mock>=3.5.0",
]
docs = [
  "sphinx>=7.3.7",
]
dev = [
  "black>=22.0.0",
  "invoke>=2.2.0",
  "mypy>=1.0.0",
  "pylint>=2.16.0",
  "ruff>=0.11.0",
  { include-group = "test" },
  { include-group = "docs" },
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["aizynthfinder*"]

[tool.setuptools.package-data]
aizynthfinder = ["data/*.yml", "data/templates/*"]

[tool.pytest.ini_options]
mccabe-complexity = 9

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
max-args = 8
max-attributes = 20
min-public-methods = 0
disable = "C0116, E0401, E1101, I1101, R0801, R0902, R0903, R0914, R1732, R1735, W0221, W0237, W0406, W0602, W0603, W0707, W1201, W1203, W1514, W3101"

[tool.coverage.run]
relative_files = true

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 120
